userid fixed; z-index fixed

--- a/client/assets/styles.css
+++ b/client/assets/styles.css
@@ -41,6 +41,7 @@ a {
 .not-found {
   position: fixed;
   top: 47px;
+  z-index:404;
   width: 100%;
   height: 100%;
   background-color: pink;
